feat: delete quiz attempts EP and locked modification of quiz after attempt exists
